# lumenated

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: GENERATOR_DESIGN.md  PROGRESS.md  PROTOCOL.md
lumenated/: __init__.py  cli.py  core.py  generator.py  music.py  tui.py  wizard.py
nova/: demo.py  generator.py  nova.py
tools/: analyze_snoop.py  connect_test.py  decompile.sh  enumerate.py  install_ytdlp_stub.py  live_show.py  probe.py  pull_apk.sh  scan.py  snoop_pull.sh  snoop_start.sh
